[package]
name = "rlviser-rocketsim"
version = "0.1.0"
edition = "2024"

[dependencies]
planus = "1.3.0"
rocketsim = { git = "https://github.com/VirxEC/RocketSim", branch = "vis-api" }
serde = { version = "1.0.195", features = ["derive"] }

[dev-dependencies]
device_query = "4.0.1"

[build-dependencies]
planus-codegen = "1.3.0"
planus-translation = "1.3.0"
