[package]
name = "rlviser-rocketsim"
version = "0.1.0"
edition = "2024"

[dependencies]
planus = "1.3.0"
rocketsim = { git = "https://github.com/VirxEC/RocketSim", branch = "vis-api" }
serde = { version = "1.0.195", features = ["derive"] }

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }

[build-dependencies]
planus-codegen = "1.3.0"
planus-translation = "1.3.0"
